Included css div for status message

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="./css/style.css">
   <title>Contact form</title>
 </head>
 
@@ -20,6 +21,9 @@
       Message:
       <textarea></textarea>
     </label>
+    <div class="status">
+
+    </div>
     <button type="submit"> Send </button>
 
   </form>
