Included own js file and jQuery library

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <link rel="stylesheet" href="./css/style.css">
+  <!-- jQuery has to be above the other js file in order for it to load -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Contact form</title>
 </head>
 
