Added event listener to submit button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <div class="status">
 
     </div>
-    <button type="submit"> Send </button>
+    <button type="submit" class="submit">
+      Send
+    </button>
 
   </form>
 </body>
