Added missing class to textarea

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </label>
     <label>
       Message:
-      <textarea></textarea>
+      <textarea class="message"></textarea>
     </label>
     <div class="status">
 
