Included fromspree.io and required name attributes

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 <body>
   <h2>Send me a message</h2>
-  <form>
+  <form action="https://formspree.io/xdopnbjo" method="POST">
     <label>
       Email:
-      <input type="email" class="email" />
+      <input type="email" class="email" name="email" />
     </label>
     <label>
       Subject:
-      <input type="text" class="subject" />
+      <input type="text" class="subject" name="subject" />
     </label>
     <label>
       Message:
-      <textarea class="message"></textarea>
+      <textarea class="message" name="message"></textarea>
     </label>
     <div class="status">
 
