Trial messages arrived to my email

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <h2>Send me a message</h2>
+  <!-- Formspree requires a 'name' attribute for each field -->
   <form action="https://formspree.io/xdopnbjo" method="POST">
     <label>
       Email:
